[gd_scene load_steps=9 format=3 uid="uid://bo8iha2w2kgt5"]

[ext_resource type="Theme" uid="uid://q74awv67f4ih" path="res://addons/graph_dialog_system/theme/main_theme.tres" id="1_1tvdf"]
[ext_resource type="Script" path="res://addons/graph_dialog_system/editor/modules/workspace/scripts/workspace.gd" id="2_yu0sn"]
[ext_resource type="Texture2D" uid="uid://y4axxgwk17jl" path="res://addons/graph_dialog_system/icons/Folder.svg" id="3_7hlaj"]
[ext_resource type="Texture2D" uid="uid://brssa48gtjult" path="res://addons/graph_dialog_system/icons/Add.svg" id="4_t0wwf"]
[ext_resource type="PackedScene" uid="uid://cr20rw0unyne0" path="res://addons/graph_dialog_system/editor/modules/workspace/graph.tscn" id="5_yj855"]
[ext_resource type="PackedScene" uid="uid://deethj56qlsml" path="res://addons/graph_dialog_system/editor/modules/workspace/text_editor.tscn" id="6_00hgx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h0dl8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gxvii"]

[node name="Workspace" type="HSplitContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1tvdf")
script = ExtResource("2_yu0sn")

[node name="StartPanel" type="Panel" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_h0dl8")

[node name="Container" type="VBoxContainer" parent="StartPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.5
offset_top = -49.5
offset_right = 176.5
offset_bottom = 49.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Label" type="RichTextLabel" parent="StartPanel/Container"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_gxvii")
bbcode_enabled = true
text = "[center][wave]Create or open a [color=orange]dialog[/color] to start!
[center]\\( ^-^)/

"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="ButtonsContainer" type="HBoxContainer" parent="StartPanel/Container"]
layout_mode = 2
alignment = 1

[node name="OpenDialogFile" type="Button" parent="StartPanel/Container/ButtonsContainer"]
layout_mode = 2
text = "Open Dialog"
icon = ExtResource("3_7hlaj")

[node name="CreateDialogFile" type="Button" parent="StartPanel/Container/ButtonsContainer"]
layout_mode = 2
text = "Create Dialog"
icon = ExtResource("4_t0wwf")

[node name="GraphEditor" type="Panel" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="Graph" parent="GraphEditor" instance=ExtResource("5_yj855")]
layout_mode = 1

[node name="TextEditor" parent="." instance=ExtResource("6_00hgx")]
visible = false
layout_mode = 2

[connection signal="pressed" from="StartPanel/Container/ButtonsContainer/OpenDialogFile" to="." method="_on_open_dialog_file_pressed"]
[connection signal="pressed" from="StartPanel/Container/ButtonsContainer/CreateDialogFile" to="." method="_on_create_dialog_file_pressed"]
